<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_normal"
    android:background="@color/colorBackground">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_small"
                android:text="@string/title"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"
                android:textColor="@color/colorText" />

            <TextView
                android:id="@+id/item_byline_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_large"
                android:textColor="@color/colorText"
                android:textSize="@dimen/text_size_small"
                android:text="@string/byline"
                android:textAlignment="textStart" />


            <ImageView
                android:id="@+id/image_view_item"
                android:layout_width="match_parent"
                android:layout_height="@dimen/article_layout_image_height"
                android:scaleType="centerCrop"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/item_caption_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_small"
                android:textColor="@color/colorText"
                android:textSize="@dimen/text_size_small"
                android:text="@string/caption"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/item_abstract_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_normal"
                android:textColor="@color/colorText"
                android:textSize="@dimen/text_size_normal"
                android:text="@string/abstract_text"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/item_date_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_normal"
                android:textColor="@color/colorText"
                android:textSize="@dimen/text_size_small"
                android:text="@string/date"
                android:textAlignment="textStart" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>